[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "a bunch of scripts"
authors = ["Sai Praneeth Reddy <sai@navanatech.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
